Fix tests, revert to single speedrunner, finish Timer.java